--- a/service_worker.html
+++ b/service_worker.html
@@ -6,5 +6,15 @@
 <body>
     hello world
 </body>
-<script src="service_worker.js"></script>
+<script type="text/javascript">
+    if ('serviceWorker' in navigator) {
+ console.log('Service Worker is supported');
+ navigator.serviceWorker.register('service_worker.js').then(function(reg) {
+   console.log(':^)', reg);
+   // TODO
+ }).catch(function(err) {
+   console.log(':^(', err);
+ });
+}
+</script>
 </html>
