--- a/service_worker.html
+++ b/service_worker.html
@@ -2,6 +2,7 @@
 <head>
 <meta charset="UTF-8">
 <title>service worker test</title>
+<link rel="manifest" href="/manifest.json">
 </head>
 <body>
     hello world
