--- a/service_worker.html
+++ b/service_worker.html
@@ -5,7 +5,7 @@
 <link rel="manifest" href="/manifest.json">
 </head>
 <body>
-    <button text="subscribe" onclick="subscribe()" ></button>
+    <button value="subscribe" onclick="subscribe()" ></button>
     hello world
 </body>
 <script type="text/javascript">
